--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ footer a:hover {
     <footer>
         <div class="container">
             <p>&copy; 2024 Your Company Name. All rights reserved.</p>
-            <p><a href="https:/faq-start-en-trzor.github.io">Privacy Policy</a> | <a href="https:/faq-start-en-trzor.github.io">Terms of Service</a></p>
+            <p><a href="/">Privacy Policy</a> | <a href="/">Terms of Service</a></p>
         </div>
     </footer>
 
